@@ -40,7 +40,9 @@
 <p>2022-11-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
-<li><p>magick/export.c (ExportViewPixelArea): Fix Coverity issue
+<li><p>coders/jpeg.c (FreeMagickClientData): Fix Coverity issue 381870
+&quot;Null pointer dereferences&quot;.</p></li>
+<li><p>magick/export.c (ExportViewPixelArea): Fix Coverity issue 381871
 &quot;Control flow issues (DEADCODE)&quot; for the case where QuantumDepth =
 32.</p></li>
 </ul>
