@@ -1,6 +1,9 @@
 2022-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
-	* magick/export.c (ExportViewPixelArea): Fix Coverity issue
+	* coders/jpeg.c (FreeMagickClientData): Fix Coverity issue 381870
+	"Null pointer dereferences".
+
+	* magick/export.c (ExportViewPixelArea): Fix Coverity issue 381871
 	"Control flow issues (DEADCODE)" for the case where QuantumDepth =
 	32.
 
